#45 Delete user - endpoints and basic backend business logic
